Fix Overflow-x

--- a/download_kangos/Assets/kangos_download.css
+++ b/download_kangos/Assets/kangos_download.css
@@ -8,6 +8,7 @@
 body {
     background-color: #09161d;
     min-height: 200vh;
+    overflow-x: hidden;
 }
 
 header {
